Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-93742

Error in public function "setclearbuttonenabled" of "QLineEdit" control

XMLWordPrintable

    • Linux/X11
    • dc794f7622bc00f7ca50fab65d6965695d6d2972 (qt/qtbase/dev) 6c4c194b588ad6ad5d6948f048a205656fa9a5be (qt/tqtc-qtbase/5.15) 5c700159507c363575acd7bdfca60fbd4505e1f8 (qt/qtbase/6.1)

      [Code]

      QLineEdit *edit = new QLineEdit(this);
      edit->resize(200, 40);
      edit->move(100, 100);
      edit->setPlaceholderText("hello");
      edit->setClearButtonEnabled(true);
      

      [Steps]

      1. Type Arabic in the input box
      2. Click the clean button
      3. Then you'll see that the placeholder text is misplaced.

      [Hope]

      • I hope that after deleting the text, the placeholdertext will not be misplaced

        1. QEditError.zip
          2 kB
          Alan Fan
        2. QEditError.mp4
          474 kB
          Alan Fan
        3. overlap.mp4
          411 kB
          Alan Fan
        4. Screen Recording 2021-06-09 at 12.34.05.mov
          358 kB
          Volker Hilsheimer
        5. Overlap.png
          289 kB
          Alan Fan
        6. new bug.mp4
          513 kB
          Alan Fan
        For Gerrit Dashboard: QTBUG-93742
        # Subject Branch Project Status CR V

            vhilshei Volker Hilsheimer
            fanruijie Alan Fan
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: